@@ -7,6 +7,11 @@ wajig (2.3) unstable; urgency=low
   * Optional arguments should be available only to COMMANDS that use them:
     - [ole] wajig --verbose install <package>
     - [new] wajig install --verbose <package>
+  * FILEINSTALL: removed in favor of INSTALL option, -f|--fileinput:
+    - [ole] wajig FILEINSTALL <filename>
+    - [new] wajig INSTALL --fileinput <filename(s)> [package(s)]
+    Note that with this new command, one can specify multiple files and
+    packages on the command line.
   * REMOVE, PURGE: add --noauth option, to avoid cases where a package would
     be downloaded when there's an unauthenticated version available; this
     happens in a case where removing/purging a package leaves a void
@@ -53,7 +58,6 @@ wajig (2.3) unstable; urgency=low
     - they display ugly output
     - I doubt if anyone will miss them
   * FILEDOWNLOAD: this was pretty much a dupe of the above command
-  * FILEINSTALL: whoever used this functionality?
   * FILEREMOVE: whoever used this functionality?
   * SETUP: it's an alias of EDITSOURCES and it appears that it was
     added since it was the name of a long-removed Debian tool, 'apt-setup'
@@ -87,7 +91,7 @@ wajig (2.3) unstable; urgency=low
   * Update to debhelper compat level 9
   * Fix some lintian warnings
 
- -- Tshepang Lekhonkhobe <tshepang@gmail.com>  Thu, 22 Mar 2012 16:36:41 +0200
+ -- Tshepang Lekhonkhobe <tshepang@gmail.com>  Thu, 22 Mar 2012 20:52:47 +0200
 
 wajig (2.2) unstable; urgency=low
 
